# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.32.9
	Martin Väth <martin at mvath.de>:
	- Support -* in profile "packages" files, see
	  https://bugs.gentoo.org/show_bug.cgi?id=610670
	- Fix remove_line(): Do not consider removing removed lines a change
	- Only treat 0 and - as "false" if nothing else follows, see
	  https://bugs.gentoo.org/show_bug.cgi?id=616972
	- internal: Add some pure attributes where possible
	- internal: Switch off format-nonliteral warning for strftime

*eix-0.32.8
	Martin Väth <martin at mvath.de>:
	- IMPORTANT: For testing scripts, it is strongly recommended to use
	  DEFAULT_MATCH_FIELD=error
	  DEFAULT_MATCH_ALGORITHM=error
	  (and to always specify match field/algorithm explicitly).
	  This way the scripts are independent of current and/or future changes
	  of the default heuristics for these values.
	- Change MATCH_ALGORITHM_EXACT so that --exact is default if the match
	  field contains _only_ things like USE-flags, sets, EAPI, or SLOT
	  and search string does not look like a regex/pattern.
	  This may cause a surprising change of behaviour and might perhaps be
	  reverted.
	- Change MATCH_ALGORITHM_SUBSTRING to apply if match field contains
	  only category/version and search string does not look like a
	  regex/pattern.
	- Introduce a default match algorithm/field "error" so that the user
	  can be required to explicitly specify algorithm/field, thus avoiding
	  any dangerous heuristics.
	- Extend DEFAULT_MATCH_ALGORITHM to allow checking for match field(s).
	- Fix segfault (regression from eix-0.32.7): Provide correct copy/move
	  constructor/assignment in poor man's (not C++-11) eix::forward_list,
	  https://github.com/vaeth/eix/issues/39

*eix-0.32.7
	Martin Väth <martin at mvath.de>:
	- internal: provide and use eix::array instead of hacks
	- internal: provide rudimentary eix::forward_list if necessary
	- internal: use std::.. for documented functions from #include <c...>
	- internal: remove UNUSED hackery